--- a/index.css
+++ b/index.css
@@ -382,7 +382,7 @@ header .move_head .scrollDown {
 
 .main_fix_img {
   background-attachment: fixed;
-  background-image: url("https://chosunboutique.com/static/assets/images/img_main_hbd_desktop.png");
+  background-image: url("https://kyohyunkim.github.io/chosunbtq/img/gong3.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
