--- a/index.scss
+++ b/index.scss
@@ -208,7 +208,7 @@ header{
 
 .main_fix_img{
     background-attachment: fixed;
-    background-image: url("/img/gong3.png");
+    background-image: url("https://kyohyunkim.github.io/chosunbtq/img/gong3.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
