--- a/index.css
+++ b/index.css
@@ -638,7 +638,7 @@ header .move_head .scrollDown {
 .sec2 #bg {
   width: 100%;
   height: 100%;
-  background-image: url("https://chosunboutique.com/static/assets/images/img_footer_hbd.png");
+  background-image: url("https://kyohyunkim.github.io/chosunbtq/img/hong3.png");
   background-repeat: no-repeat;
   background-position: center;
   -webkit-transition: 1s;
