--- a/index.scss
+++ b/index.scss
@@ -388,7 +388,7 @@ object-fit: cover;
     }
     #bg{
         width:100%;height:100%;       
-        background-image: url("https://chosunboutique.com/static/assets/images/img_footer_hbd.png");
+        background-image: url("https://kyohyunkim.github.io/chosunbtq/img/hong3.png");
         background-repeat: no-repeat;
         background-position: center;
         transition: 1s;
